--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   google_fonts: ^6.2.1
   image_picker: ^1.0.7
   shared_preferences: ^2.2.2
+  carousel_slider: ^4.2.1
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
