--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   shared_preferences: ^2.2.2
   carousel_slider: ^4.2.1
   smooth_page_indicator: ^1.1.0
+  buttons_tabbar: ^1.3.8
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
