--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,17 +7,18 @@ environment:
   sdk: '>=3.3.2 <4.0.0'
 
 dependencies:
+  buttons_tabbar: ^1.3.8
+  carousel_slider: ^4.2.1
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.5
   flutter_svg: ^2.0.10+1
   gap: ^3.0.1
   google_fonts: ^6.2.1
+  http: ^1.2.1
   image_picker: ^1.0.7
   shared_preferences: ^2.2.2
-  carousel_slider: ^4.2.1
   smooth_page_indicator: ^1.1.0
-  buttons_tabbar: ^1.3.8
-  http: ^1.2.1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
