--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   image_picker: ^1.0.7
   shared_preferences: ^2.2.2
   smooth_page_indicator: ^1.1.0
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   flutter_lints: ^3.0.0
